syntax = "proto3";

package drone;

option go_package = "pkg/pb";
import "pkg/proto/SearchOptions.proto";
import "pkg/proto/PatchOptions.proto";
import "pkg/proto/SpatialAttribute.proto";
import "pkg/ipc/TrackMessage.proto";
import "pkg/ipc/TrackInfoEnum.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";



enum AT_UAV_OP_MODE {
    AUOM_MODE_UNKNOWN = 0;
    AUOM_MODE_ONE = 1;
 
}
enum AT_DRONE_STATUS {
    ADS_UNKNOWN = 0;
    ADS_FLYING = 1;
    ADS_LANDED = 2;
}

enum AT_VALIDATE_STATUS {
    ADS_CREATED = 0;
    ADS_SENT = 1;
    ADS_APPROVED = 2;
}

message Drone {
    string  ID          = 1;//`json:"id,omitempty" bson:"_id"`
    string  RTSPLink      = 2;//`json:"rtsp_link,omitempty" bson:"rtsp_link"`
    string  GcsID        = 3;//`json:"gcs_id,omitempty" bson:"gcs_id"`
    AT_DRONE_STATUS  DroneStatus      = 4;//`json:"drone_status,omitempty" bson:"drone_status"`
    string  DeportID        = 5;//`json:"deport_id,omitempty" bson:"deport_id"`
    double Mass = 6;//`json:"mass,omitempty" bson:"mass"
    double MaxPayload = 7;//`json:"max_payload,omitempty" bson:"max_payload"
    double MaxBattery = 8;//`json:"max_battery,omitempty" bson:"max_battery"
    double MaxPower = 9;//`json:"max_power,omitempty" bson:"max_power"
    double MaxSpeed = 10;//`json:"max_speed,omitempty" bson:"max_speed"
    repeated double Size = 11;//`json:"size,omitempty" bson:"size"
    repeated string FixedLockerIDs = 12;//`json:"fixed_locker_ids,omitempty" bson:"fixed_locker_ids"
    AT_VALIDATE_STATUS ValidateStatus = 13;//`json:"validate_status,omitempty" bson:"validate_status"
    string Image = 14;//`json:"image,omitempty" bson:"image"
    uint64 CreatedAt = 52;//`json:"created_at,omitempty" bson:"created_at"  audit:"createdAt"`
    uint64 UpdatedAt = 53;//`json:"updated_at,omitempty" bson:"updated_at"  audit:"updatedAt"`
    string CreatedBy = 54;//`json:"created_by,omitempty" bson:"created_by"`
    string UpdatedBy = 55;//`json:"updated_by,omitempty" bson:"updated_by"`
}


service DroneService {
    rpc create (Drone) returns (Drone);
    rpc search (search_options.SearchOptions) returns (SearchDroneResponse);
    rpc patch (patch_options.PatchOptions) returns (patch_options.PatchResponse);
}

message SearchDroneResponse {
    repeated Drone Drones = 1;//
    int32 TotalCount =2;//
}

message TrackHistory {
    string  ID          = 1;//`json:"id,omitempty" bson:"_id"`
    string  DroneID     = 2;//`json:"drone_id,omitempty" bson:"drone_id"`
    string  OrderID     = 3;//`json:"order_id,omitempty" bson:"order_id"`
    string  DatasourceID  = 4;//`json:"datasource,omitempty" bson:"datasource"`
    int32 TrackID = 5 ;//`json:"track_id,omitempty" bson:"track_id"`
    bytes  LocationByte  = 6;//`json:"location_byte,omitempty" bson:"location_byte"`
    uint64 CreatedAt = 7;//`json:"created_at,omitempty" bson:"created_at"  audit:"createdAt"`
}


message Location {
    // string  ID          = 1;//`json:"id,omitempty" bson:"_id"`
    spatial_attribute.GeodeticPosition GeodeticPosition  = 1;//`json:"geodetic_position,omitempty" bson:"geodetic_position"`
    // uint64 CreatedAt = 3;//`json:"created_at,omitempty" bson:"created_at"  audit:"createdAt"`
    // uint64 UpdatedAt = 4;//`json:"updated_at,omitempty" bson:"updated_at"  audit:"updatedAt"`
}


service TrackHistoryService {
    rpc create (TrackHistory) returns (TrackHistory);
    rpc search (search_options.SearchOptions) returns (SearchTrackHistoryResponse);
    rpc patch (patch_options.PatchOptions) returns (patch_options.PatchResponse);
}

message SearchTrackHistoryResponse {
    repeated TrackHistory TrackHistorys = 1;//
    int32 TotalCount =2;//
}



message ObjectTrack {
    string  ID          = 1;//`json:"id,omitempty" bson:"_id"`
    int32  ObjectTrackID = 2;//`json:"object_track_id,omitempty" bson:"object_track_id"`
    string ObjectID = 3;//`json:"object_id,omitempty" bson:"object_id"`
    spatial_attribute.PolarVelocity PolarVelocity = 4;//`json:"polar_velocity,omitempty" bson:"polar_velocity"`
    double Heading = 5;//`json:"heading,omitempty" bson:"heading"`
    double Battery = 6;//`json:"battery,omitempty" bson:"battery"` 
    map<string, uint64> DatasourcesLatestUpdate = 7;//`json:"datasource_latest_update,omitempty" bson:"datasource_latest_update"`
    spatial_attribute.GeodeticPosition Position  = 8;//`json:"position,omitempty" bson:"position"`
    AT_DRONE_STATUS  DroneStatus      = 9;//`json:"drone_status,omitempty" bson:"drone_status"`
    repeated com.vht.bms.messages.TrackMessage SourceTracks= 10;//`json:"source_tracks,omitempty" bson:"source_tracks"`
    com.vht.bms.messages.AircraftType AircraftType= 11;//`json:"aircraft_type,omitempty" bson:"aircraft_type"`
    uint64 RemainTime = 51;//`json:"remain_time,omitempty" bson:"remain_time"  audit:"updatedAt"`
    uint64 CreatedAt = 52;//`json:"created_at,omitempty" bson:"created_at"  audit:"createdAt"`
    uint64 UpdatedAt = 53;//`json:"updated_at,omitempty" bson:"updated_at"  audit:"updatedAt"`
    string CreatedBy = 54;//`json:"created_by,omitempty" bson:"created_by"`
    string UpdatedBy = 55;//`json:"updated_by,omitempty" bson:"updated_by"`
}


service ObjectTrackService {
    rpc create (ObjectTrack) returns (ObjectTrack);
    rpc search (search_options.SearchOptions) returns (SearchObjectTrackResponse);
    rpc patch (patch_options.PatchOptions) returns (patch_options.PatchResponse);
    rpc findByID (google.protobuf.Int32Value) returns (ObjectTrack);
    rpc findAll (google.protobuf.Empty) returns (SearchObjectTrackResponse);
}

message SearchObjectTrackResponse {
    repeated ObjectTrack ObjectTracks = 1;//
    int32 TotalCount =2;//
}

message ObjectTrackRequest {}